--- a/.github/workflows/pipe-it-2cluster.yml
+++ b/.github/workflows/pipe-it-2cluster.yml
@@ -290,6 +290,7 @@ jobs:
           -pl integration-test \
           -am -PMultiClusterIT2TableModel \
           -ntp
+          -debug
       - name: Upload Artifact
         if: failure()
         uses: actions/upload-artifact@v4
@@ -302,5 +303,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: cluster-log-table-model-java${{ matrix.java }}-${{ runner.os }}-${{ matrix.cluster }}-${{ matrix.cluster }}
-          path: data
+          path: integration-test/target
           retention-days: 30
