--- a/.github/workflows/pipe-it-2cluster.yml
+++ b/.github/workflows/pipe-it-2cluster.yml
@@ -57,14 +57,23 @@ jobs:
         # we do not compile client-cpp for saving time, it is tested in client.yml
         # we can skip influxdb-protocol because it has been tested separately in influxdb-protocol.yml
         run: |
-          mvn clean verify \
-          -P with-integration-tests \
-          -DskipUTs \
-          -DintegrationTest.forkCount=1 -DConfigNodeMaxHeapSize=256 -DDataNodeMaxHeapSize=1024 -DDataNodeMaxDirectMemorySize=768 \
-          -DClusterConfigurations=${{ matrix.cluster }},${{ matrix.cluster }} \
-          -pl integration-test \
-          -am -PMultiClusterIT2TableModel \
-          -ntp
+          while true; do
+            mvn clean verify \
+            -P with-integration-tests \
+            -DskipUTs \
+            -DintegrationTest.forkCount=1 \
+            -DConfigNodeMaxHeapSize=256 \
+            -DDataNodeMaxHeapSize=1024 \
+            -DDataNodeMaxDirectMemorySize=768 \
+            -DClusterConfigurations=${{ matrix.cluster }},${{ matrix.cluster }} \
+            -pl integration-test \
+            -am -PMultiClusterIT2TableModel \
+            -ntp
+            if [ $? -ne 0 ]; then
+              echo "Maven command failed, exiting loop."
+              exit 1
+            fi
+          done
       - name: Upload Artifact
         if: failure()
         uses: actions/upload-artifact@v4
