--- a/.github/workflows/pipe-it.yml
+++ b/.github/workflows/pipe-it.yml
@@ -79,7 +79,7 @@ jobs:
               -DClusterConfigurations=${{ matrix.cluster }},${{ matrix.cluster }} \
               -pl integration-test \
               -am -PMultiClusterIT2DualTableManualEnhanced \
-              -ntp >> ~/run-tests-$attempt.log && return 0
+              -ntp >> ~/run-tests-$attempt.log
               test_output=$(cat ~/run-tests-$attempt.log) 
 
               mv ~/run-tests-$attempt.log integration-test/target/cluster-logs/
@@ -88,14 +88,14 @@ jobs:
               echo "$test_output"
               echo "==================== END: ~/run-tests-$attempt.log ======================"
 
-              if [ $attempt -lt $max_attempts ]; then
-                echo "Test failed with artifact transfer issue, attempt $attempt. Retrying in $retry_sleep seconds..."
-                sleep $retry_sleep
+              if [ $? -eq 0 ]; then
+                echo "Test succeeded on attempt $attempt."
                 attempt=$((attempt + 1))
+                echo "Proceeding to next attempt..."
               else
-                echo "Test failed after $max_attempts attempts due to artifact transfer issue."
-                echo "Treating this as a success because the issue is likely transient."
-                return 0
+                echo "Test failed on attempt $attempt."
+                echo "Stopping the script due to failure."
+                return 1
               fi
             done
           }
@@ -105,5 +105,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: cluster-log-dual-table-manual-enhanced-java${{ matrix.java }}-${{ runner.os }}-${{ matrix.cluster }}-${{ matrix.cluster }}
-          path: integration-test/target/cluster-logs
+          path: integration-test/target
           retention-days: 30
